# WhisperBridgeCast

./: .gitignore  README.md  captioner_common.py  captioner_gui.py  captioner_gui.spec  captions_overlay.py  net_common.py  pyproject.toml  requirements.txt  todo.txt  version.txt  wav_writer.py  web_server.py  whisper_online.py  whisper_online_server.py  whisper_server.py  zoom_captioner.py  zoom_captioner_gui.py
.github/: copilot-instructions.md
.github/prompts/: plan-dynamicTranslationBackendMetadataHandshake.prompt.md
.github/workflows/: build.yml
app/common/: __init__.py  languages.py  net_common.py  utils.py
app/gui/: audio.py  audio_utils.py  captions.py  main.py  network.py  settings.py  settings_tracker.py  ui.py
app/gui/widgets/: __init__.py  captions_overlay.py  graph_widget.py  status_indicator.py
app/server/: asr.py  main.py  pipeline.py  senders.py  settings.py  silero_vad_iterator.py  tcp_server.py  translation.py  wav_writer.py  whisper_streamer.py
app/server/asr_backends/: __init__.py  base.py  faster_whisper.py  mlx_whisper.py  openai_api.py  whisper_timestamped.py
app/server/transl_backends/: __init__.py  base.py  euro_llm.py  google_gemini.py  marian_mt.py  nllb.py  online_translators.py
app/web/: main.py  server.py  transcript_handler.py  transcript_server.py
app/web/static/: app.js  index.html  style.css
requirements/: all.txt  gui.txt  server-optional.txt  server.txt
tests/: test_audio_switcher.py  test_tcp_server.py  test_translator.py  test_ui_settings.py
